[package]
name = "fabricbin"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/makindotcc/fabricbin"
description = "Patch binary file using IDA signatures and defined replacement bytes in YAML."
license = "MIT"
categories = ["development-tools", "parsing"]

[dependencies]
anyhow = "1.0.75"
regex = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.25"
